<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.CreateUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/action_bar_style"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="19dp"
                android:layout_height="27dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/C_profil"
                android:textSize="30dp"
                android:textColor="@color/white" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/Hi_input"
            android:textSize="25dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/Hi_input2"
            android:textSize="25dp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/categories_box_style">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/profile_box_style">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/nav"/>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:hint="@string/n_customer"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#FF69B4"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"

                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="63dp"
                android:layout_marginRight="15dp"
                android:hint="@string/a_customer"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF69B4"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/crsr"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="123dp"
                android:layout_marginRight="15dp"
                android:hint="@string/pn_customer"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF69B4"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/crsr"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizenLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="183dp"
                android:layout_marginRight="15dp"
                android:hint="@string/c_customer"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF69B4"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCitizen"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/crsr"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/motorLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="243dp"
                android:layout_marginRight="15dp"
                android:hint="@string/m_customer"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF69B4"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMotor"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/crsr"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rentLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="303dp"
                android:layout_marginRight="15dp"
                android:hint="@string/d_customer"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF69B4"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRent"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/crsr"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style"
        android:layout_marginTop="570dp"
        android:layout_marginLeft="250dp"
        android:text="Submit"
        android:textColor="#fff"
        app:backgroundTint="@color/blue"
        />
</RelativeLayout>