...
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeCustomer"
    tools:context=".Customer.HomeCustomer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

...
            app:backgroundTint="@color/pink"
            android:text="@string/Details"
            android:textColor="#fff"
            />

        <Button
            android:id="@+id/btnAddCustomer"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/profile_box_style"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="22dp"
            android:text="@string/AddM"
...
